Add navigation items

--- a/index.html
+++ b/index.html
@@ -8,13 +8,24 @@
   </head>
   <body>
     <header>
+      <h1>Veliko Kardziev</h1>
       <nav>
-        <a>About me</a>
-        <a>Contacts</a>
-        <a>Biography</a>
+        <a href="#aboutme">About me</a>
+        <a href="contacts">Contacts</a>
+        <a href="biography">Biography</a>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <section id="aboutme">
+        <h2>About Me</h2>
+      </section>
+      <section id="contacts">
+        <h2>Contacts</h2>
+      </section>
+      <section id="biography">
+        <h2>Biography</h2>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
