Add profile picture

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
     <main>
       <section id="aboutme">
         <h2>About Me</h2>
+        <img
+          src="/assets/profilepicture.jpeg"
+          width="150"
+          alt="A picture of me"
+        />
       </section>
       <section id="contacts">
         <h2>Contacts</h2>
