--- a/index.html
+++ b/index.html
@@ -11,21 +11,34 @@
       <h1>Veliko Kardziev</h1>
       <nav>
         <a href="#aboutme">About me</a>
-        <a href="contacts">Contacts</a>
+        <a href="contact">Contact</a>
         <a href="biography">Biography</a>
       </nav>
     </header>
     <main>
       <section id="aboutme">
         <h2>About Me</h2>
+        <figure>
         <img
           src="/assets/profilepicture.jpeg"
           width="150"
           alt="A picture of me"
         />
+        <figcaption>Hi, it's me!</figcaption>
+        </figure>
+        <p id="description">
+          Loving
+          <ul>
+            <li>Nature 🌳</li>
+            <li>Urban Mobility 🚴‍♂️</li>
+            <li>Sustainability ♻️</li>
+            <li>Social Economy ✌🏼</li>
+            <li>Pretzels 🥨</li>
+          </ul>
+        </p>
       </section>
-      <section id="contacts">
-        <h2>Contacts</h2>
+      <section id="contact">
+        <h2>Contact</h2>
       </section>
       <section id="biography">
         <h2>Biography</h2>
