add contact information

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <figcaption>Hi, it's me!</figcaption>
         </figure>
         <p id="description">
-          Loving
+          <h3>Loving</h3>
           <ul>
             <li>Nature 🌳</li>
             <li>Urban Mobility 🚴‍♂️</li>
@@ -38,7 +38,12 @@
         </p>
       </section>
       <section id="contact">
-        <h2>Contact</h2>
+        <h2>Let's team up</h2>
+        <ul>
+            <li>📍Munich</li>
+            <li><a href="https://github.com/vaupunkt">GitHub</a></li>
+            <li><a href="https://www.linkedin.com/in/velikokardziev/">LinkedIn</a></li>
+        </ul>
       </section>
       <section id="biography">
         <h2>Biography</h2>
