--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
   <body>
     <header>
       <h1>Veliko Kardziev</h1>
-      <nav>
-        <a href="#aboutme">About me</a>
-        <a href="contact">Contact</a>
-        <a href="biography">Biography</a>
+      <nav id="nav">
+        <li><a href="#aboutme">About me</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#biography">Biography</a></li>
       </nav>
     </header>
     <main>
