--- a/index.html
+++ b/index.html
@@ -1,53 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./css/styles.css" />
-    <title>Veliko Kardziev</title>
-  </head>
-  <body>
-    <header>
-      <h1>Veliko Kardziev</h1>
-      <nav>
-        <a href="#aboutme">About me</a>
-        <a href="#contact">Contact</a>
-        <a href="#biography">Biography</a>
-      </nav>
-    </header>
-    <main>
-      <section class="aboutme" id="aboutme">
-        <h2>About Me</h2>
-        <figure>
-          <img src="/assets/profilepicture.jpeg" alt="A picture of me" />
-          <figcaption>Hi, it's me!</figcaption>
-        </figure>
-        <section class="description">
-          <h3>Loving</h3>
-          <ul class="thingsilove">
-            <li>Nature 🌳</li>
-            <li>Urban Mobility 🚴‍♂️</li>
-            <li>Sustainability ♻️</li>
-            <li>Social Economy ✌🏼</li>
-            <li>Pretzels 🥨</li>
-          </ul>
-        </section>
-      </section>
-      <section class="contact" id="contact">
-        <h2>Let's team up</h2>
-        <ul class="contactlinks">
-          <li>📍Munich</li>
-          <li><a href="https://github.com/vaupunkt">GitHub</a></li>
-          <li>
-            <a href="https://www.linkedin.com/in/velikokardziev/">LinkedIn</a>
-          </li>
-        </ul>
-      </section>
-      <section class="biography" id="biography">
-        <h2>Biography</h2>
-      </section>
-    </main>
-    <footer></footer>
-  </body>
+	<head>
+		<meta charset="UTF-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="stylesheet" href="./css/styles.css" />
+		<title>Veliko Kardziev</title>
+	</head>
+	<body>
+		<header>
+			<h1>Veliko Kardziev</h1>
+			<nav>
+				<a href="#aboutme">About me</a>
+				<a href="#contact">Contact</a>
+				<a href="#biography">Biography</a>
+			</nav>
+		</header>
+		<main>
+			<section class="aboutme" id="aboutme">
+				<h2>About Me</h2>
+				<figure>
+					<img src="/assets/profilepicture.jpeg" alt="A picture of me" />
+					<figcaption>Hi, it's me!</figcaption>
+				</figure>
+				<section class="description">
+					<h3>Loving</h3>
+					<ul class="thingsilove">
+						<li>Nature 🌳</li>
+						<li>Urban Mobility 🚴‍♂️</li>
+						<li>Sustainability ♻️</li>
+						<li>Social Economy ✌🏼</li>
+						<li>Pretzels 🥨</li>
+					</ul>
+				</section>
+			</section>
+			<section class="contact" id="contact">
+				<h2>Let's team up</h2>
+				<ul class="contactlinks">
+					<li>Munich 📍</li>
+					<li><a href="https://github.com/vaupunkt">GitHub</a></li>
+					<li>
+						<a href="https://www.linkedin.com/in/velikokardziev/">LinkedIn</a>
+					</li>
+				</ul>
+			</section>
+			<section class="biography" id="biography">
+				<h2>Biography</h2>
+			</section>
+		</main>
+		<footer></footer>
+	</body>
 </html>
