add shadow animation and header

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 					<img src="/assets/profilepicture.jpeg" alt="A picture of me" />
 					<figcaption>Hi, it's me!</figcaption>
 				</figure>
-				<section class="description">
+				<section class="description box">
 					<h3>Loving</h3>
 					<ul class="thingsilove">
 						<li>Nature 🌳</li>
@@ -34,7 +34,7 @@
 					</ul>
 				</section>
 			</section>
-			<section class="contact" id="contact">
+			<section class="contact box" id="contact">
 				<h2>Let's team up</h2>
 				<ul class="contactlinks">
 					<li>Munich 📍</li>
@@ -44,7 +44,7 @@
 					</li>
 				</ul>
 			</section>
-			<section class="biography" id="biography">
+			<section class="biography box" id="biography">
 				<h2>Biography</h2>
 			</section>
 		</main>
