add transparent picture

--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@
 		<main>
 			<section class="aboutme" id="aboutme">
 				<h2>About Me</h2>
-				<figure>
-					<img src="/assets/profilepicture.jpeg" alt="A picture of me" />
+				<figure class="profilepicture">
+					<img
+						src="/assets/profilepicture-transparent.png"
+						alt="A picture of me" />
 					<figcaption>Hi, it's me!</figcaption>
 				</figure>
 				<section class="description box">
