Add footer and styling

--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
 				<h2>Biography</h2>
 			</section>
 		</main>
-		<footer></footer>
+		<footer>
+			Made with 💌 by <a href="https://github.com/vaupunkt">Veliko Kardziev</a>
+		</footer>
 	</body>
 </html>
