Add footer and styling

--- a/index.html
+++ b/index.html
@@ -48,6 +48,31 @@
 			</section>
 			<section class="biography box" id="biography">
 				<h2>Biography</h2>
+				<table>
+					<thead>
+						<th><h3>When</h3></th>
+						<th><h3>What</h3></th>
+					</thead>
+					<tbody>
+						<tr>
+							<td>May '23 - Aug '23</td>
+							<td>Web Developement @Neue Fische</td>
+						</tr>
+						<tr>
+							<td>Oct '22 - April '23</td>
+							<td>Projectmanagement @trurnit GmbH</td>
+						</tr>
+						<tr>
+							<td>April '20 - Sept '23</td>
+							<td>
+								Projectmanagement
+								<a href="https://katapult-magazin.de/de/autoren/veliko-kardziev"
+									>@Katapult</a
+								>
+							</td>
+						</tr>
+					</tbody>
+				</table>
 			</section>
 		</main>
 		<footer>
