Add more styling

--- a/index.html
+++ b/index.html
@@ -19,22 +19,45 @@
 		<main>
 			<section class="aboutme" id="aboutme">
 				<h2>About Me</h2>
-				<figure class="profilepicture">
-					<img
-						src="/assets/profilepicture-transparent.png"
-						alt="A picture of me" />
-					<figcaption>Hi, it's me!</figcaption>
-				</figure>
-				<section class="description box">
-					<h3>Loving</h3>
-					<ul class="thingsilove">
-						<li>Nature 🌳</li>
-						<li>Urban Mobility 🚴‍♂️</li>
-						<li>Sustainability ♻️</li>
-						<li>Social Economy ✌🏼</li>
-						<li>Pretzels 🥨</li>
-					</ul>
-				</section>
+				<article class="infosaboutme">
+					<figure class="profilepicture">
+						<img
+							src="/assets/profilepicture-transparent.png"
+							alt="A picture of me" />
+						<figcaption>Hi, it's me!</figcaption>
+					</figure>
+					<section class="description box">
+						<h3>Loving</h3>
+						<ul class="thingsilove">
+							<li>Nature 🌳</li>
+							<li>Urban Mobility 🚴‍♂️</li>
+							<li>Sustainability ♻️</li>
+							<li>Social Economy ✌🏼</li>
+							<li>Pretzels 🥨</li>
+						</ul>
+					</section>
+				</article>
+			</section>
+			<section class="techstack box">
+				<h2>Tech Stack</h2>
+				<ul class="techstacklist">
+					<li>HTML</li>
+					<li>CSS</li>
+					<li>Java</li>
+					<li>JavaScript</li>
+					<li>Python</li>
+					<li>flask</li>
+					<li>Node.js</li>
+					<li>React</li>
+					<li>Next</li>
+					<li>MongoDB</li>
+					<li>Pair Programming</li>
+					<li>Figma</li>
+					<li>NoSQL</li>
+					<li>Git</li>
+					<li>REST</li>
+					<li>Scrum</li>
+				</ul>
 			</section>
 			<section class="contact box" id="contact">
 				<h2>Let's team up</h2>
