Fix profilepicture URL

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<article class="infosaboutme">
 					<figure class="profilepicture">
 						<img
-							src="/assets/profilepicture-transparent.png"
+							src="./assets/profilepicture-transparent.png"
 							alt="A picture of me" />
 						<figcaption>Hi, it's me!</figcaption>
 					</figure>
