Add new Infos to Biography

--- a/index.html
+++ b/index.html
@@ -73,26 +73,52 @@
 				<h2>Biography</h2>
 				<table>
 					<thead>
+						<th class="biographyemoji"></th>
 						<th><h3>When</h3></th>
 						<th><h3>What</h3></th>
 					</thead>
 					<tbody>
 						<tr>
-							<td>May '23 - Aug '23</td>
+							<td class="biographyemoji">🧑‍🎓</td>
+							<td class="date">May '23 - Aug '23</td>
 							<td>Web Developement @Neue Fische</td>
 						</tr>
 						<tr>
-							<td>Oct '22 - April '23</td>
+							<td class="biographyemoji">💼</td>
+							<td class="date">Oct '22 - April '23</td>
 							<td>Projectmanagement @trurnit GmbH</td>
 						</tr>
 						<tr>
-							<td>April '20 - Sept '23</td>
+							<td class="biographyemoji">💼</td>
+							<td class="date">April '20 - Sept '23</td>
 							<td>
 								Projectmanagement
 								<a href="https://katapult-magazin.de/de/autoren/veliko-kardziev"
-									>@Katapult</a
+									>@Katapult Magazin & Verlag</a
 								>
 							</td>
+						</tr>
+						<tr>
+							<td class="biographyemoji">💼</td>
+							<td class="date">Jan '18 - March '20</td>
+							<td>Production Manager @WDR, NDR & rbb</td>
+						</tr>
+						<tr>
+							<td class="biographyemoji">🧑‍🎓</td>
+							<td class="date">Feb '14 - Dez '18</td>
+							<td>Economics (B. Sc.) @TU Dresden</td>
+						</tr>
+						<tr>
+							<td class="biographyemoji"></td>
+							<td class="date">ca. 2010 - 2012</td>
+							<td>
+								(Dis-)Assambled first Computer, installed Linux everywhere
+							</td>
+						</tr>
+						<tr>
+							<td class="biographyemoji"></td>
+							<td class="date">July 1993</td>
+							<td>Birth</td>
 						</tr>
 					</tbody>
 				</table>
