add links for biography

--- a/index.html
+++ b/index.html
@@ -81,12 +81,20 @@
 						<tr>
 							<td class="biographyemoji">🧑‍🎓</td>
 							<td class="date">May '23 - Aug '23</td>
-							<td>Web Developement @Neue Fische</td>
+							<td>
+								<a href="https://www.neuefische.de/bootcamp/web-development"
+									>Web Developement @Neue Fische</a
+								>
+							</td>
 						</tr>
 						<tr>
 							<td class="biographyemoji">💼</td>
 							<td class="date">Oct '22 - April '23</td>
-							<td>Projectmanagement @trurnit GmbH</td>
+							<td>
+								Projectmanagement @<a href="https://www.trurnit.de/"
+									>trurnit GmbH</a
+								>
+							</td>
 						</tr>
 						<tr>
 							<td class="biographyemoji">💼</td>
@@ -101,7 +109,12 @@
 						<tr>
 							<td class="biographyemoji">💼</td>
 							<td class="date">Jan '18 - March '20</td>
-							<td>Production Manager @WDR, NDR & rbb</td>
+							<td>
+								Production Manager @<a
+									href="https://www.ard-zdf-aufnahmeleitung.de/"
+									>WDR, NDR & rbb</a
+								>
+							</td>
 						</tr>
 						<tr>
 							<td class="biographyemoji">🧑‍🎓</td>
@@ -110,7 +123,7 @@
 						</tr>
 						<tr>
 							<td class="biographyemoji"></td>
-							<td class="date">ca. 2010 - 2012</td>
+							<td class="date">ca. 2008 - 2012</td>
 							<td>
 								(Dis-)Assambled first Computer, installed Linux everywhere
 							</td>
