--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 							<li>Urban Mobility 🚴‍♂️</li>
 							<li>Sustainability ♻️</li>
 							<li>Social Economy ✌🏼</li>
+							<li>Hacking+Homebrew 🍺</li>
 							<li>Pretzels 🥨</li>
 						</ul>
 					</section>
@@ -122,10 +123,18 @@
 							<td>Economics (B. Sc.) @TU Dresden</td>
 						</tr>
 						<tr>
-							<td class="biographyemoji"></td>
+							<td class="biographyemoji">👨🏼‍💻</td>
 							<td class="date">ca. 2008 - 2012</td>
 							<td>
 								(Dis-)Assambled first Computer, installed Linux everywhere
+							</td>
+						</tr>
+						<tr>
+							<td class="biographyemoji">👾</td>
+							<td>since always</td>
+							<td>
+								interests in Gaming, IT, Homebrew, Jailbreaking, Rooting and
+								Hacking
 							</td>
 						</tr>
 						<tr>
