--- a/index.html
+++ b/index.html
@@ -42,22 +42,27 @@
 			<section class="techstack box">
 				<h2>Tech Stack</h2>
 				<ul class="techstacklist">
-					<li>HTML</li>
-					<li>CSS</li>
+					<li>HTML5</li>
+					<li>CSS3</li>
 					<li>Java</li>
-					<li>JavaScript</li>
+					<li>Git Workflow</li>
+					<li>JavaScript ES8+</li>
 					<li>Python</li>
 					<li>flask</li>
 					<li>Node.js</li>
 					<li>React</li>
 					<li>Next</li>
 					<li>MongoDB</li>
+					<li>Mongoose</li>
+					<li>npm</li>
 					<li>Pair Programming</li>
 					<li>Figma</li>
 					<li>NoSQL</li>
-					<li>Git</li>
+					<li>Trello</li>
+					<li>Slack</li>
 					<li>REST</li>
 					<li>Scrum</li>
+					<li>GitHub</li>
 				</ul>
 			</section>
 			<section class="contact box" id="contact">
