--- a/index.html
+++ b/index.html
@@ -33,7 +33,6 @@
 							<li>Urban Mobility 🚴‍♂️</li>
 							<li>Sustainability ♻️</li>
 							<li>Social Economy ✌🏼</li>
-							<li>Hacking+Homebrew 🍺</li>
 							<li>Pretzels 🥨</li>
 						</ul>
 					</section>
@@ -139,7 +138,7 @@
 							<td>since always</td>
 							<td>
 								interests in Gaming, IT, Homebrew, Jailbreaking, Rooting and
-								Hacking
+								Data Science
 							</td>
 						</tr>
 						<tr>
