making page more responsive

--- a/index.html
+++ b/index.html
@@ -86,25 +86,25 @@
 						<tr>
 							<td class="biographyemoji">🧑‍🎓</td>
 							<td class="date">May '23 - Aug '23</td>
-							<td>
+							<td class="biographycontent">
+								Web Developement
 								<a href="https://www.neuefische.de/bootcamp/web-development"
-									>Web Developement @Neue Fische</a
+									>@Neue Fische</a
 								>
 							</td>
 						</tr>
 						<tr>
 							<td class="biographyemoji">💼</td>
 							<td class="date">Oct '22 - April '23</td>
-							<td>
-								Projectmanagement @<a href="https://www.trurnit.de/"
-									>trurnit GmbH</a
-								>
+							<td class="biographycontent">
+								Projectmanagement
+								<a href="https://www.trurnit.de/">@trurnit GmbH</a>
 							</td>
 						</tr>
 						<tr>
 							<td class="biographyemoji">💼</td>
 							<td class="date">April '20 - Sept '23</td>
-							<td>
+							<td class="biographycontent">
 								Projectmanagement
 								<a href="https://katapult-magazin.de/de/autoren/veliko-kardziev"
 									>@Katapult Magazin & Verlag</a
@@ -114,29 +114,29 @@
 						<tr>
 							<td class="biographyemoji">💼</td>
 							<td class="date">Jan '18 - March '20</td>
-							<td>
-								Production Manager @<a
-									href="https://www.ard-zdf-aufnahmeleitung.de/"
-									>WDR, NDR & rbb</a
+							<td class="biographycontent">
+								Production Manager
+								<a href="https://www.ard-zdf-aufnahmeleitung.de/"
+									>@WDR, NDR & rbb</a
 								>
 							</td>
 						</tr>
 						<tr>
 							<td class="biographyemoji">🧑‍🎓</td>
 							<td class="date">Feb '14 - Dez '18</td>
-							<td>Economics (B. Sc.) @TU Dresden</td>
+							<td class="biographycontent">Economics (B. Sc.) @TU Dresden</td>
 						</tr>
 						<tr>
 							<td class="biographyemoji">👨🏼‍💻</td>
 							<td class="date">ca. 2008 - 2012</td>
-							<td>
+							<td class="biographycontent">
 								(Dis-)Assambled first Computer, installed Linux everywhere
 							</td>
 						</tr>
 						<tr>
 							<td class="biographyemoji">👾</td>
-							<td>since always</td>
-							<td>
+							<td class="date">since always</td>
+							<td class="biographycontent">
 								interests in Gaming, IT, Homebrew, Jailbreaking, Rooting and
 								Data Science
 							</td>
@@ -144,7 +144,7 @@
 						<tr>
 							<td class="biographyemoji"></td>
 							<td class="date">July 1993</td>
-							<td>Birth</td>
+							<td class="biographycontent">Birth</td>
 						</tr>
 					</tbody>
 				</table>
