--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 							<td class="biographyemoji">🧑‍🎓</td>
 							<td class="date">May '23 - Aug '23</td>
 							<td class="biographycontent">
-								Web Developement
+								Web Development
 								<a href="https://www.neuefische.de/bootcamp/web-development"
 									>@Neue Fische</a
 								>
