Refactor HTML structure and update tech stack

--- a/index.html
+++ b/index.html
@@ -1,157 +1,165 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="./css/styles.css" />
-		<title>Veliko Kardziev</title>
-	</head>
-	<body>
-		<header>
-			<h1>Veliko Kardziev</h1>
-			<ul class="nav">
-				<li><a href="#aboutme">About me</a></li>
-				<li><a href="#contact">Contact</a></li>
-				<li><a href="#biography">Biography</a></li>
-			</ul>
-		</header>
-		<main>
-			<section class="aboutme" id="aboutme">
-				<h2>About Me</h2>
-				<article class="infosaboutme">
-					<figure class="profilepicture">
-						<img
-							src="./assets/profilepicture-transparent.png"
-							alt="A picture of me" />
-						<figcaption>Hi, it's me!</figcaption>
-					</figure>
-					<section class="description box">
-						<h3>Loving</h3>
-						<ul class="thingsilove">
-							<li>Nature 🌳</li>
-							<li>Urban Mobility 🚴‍♂️</li>
-							<li>Sustainability ♻️</li>
-							<li>Social Economy ✌🏼</li>
-							<li>Pretzels 🥨</li>
-						</ul>
-					</section>
-				</article>
-			</section>
-			<section class="techstack box">
-				<h2>Tech Stack</h2>
-				<ul class="techstacklist">
-					<li>HTML5</li>
-					<li>CSS3</li>
-					<li>Java</li>
-					<li>Git Workflow</li>
-					<li>JavaScript ES8+</li>
-					<li>Python</li>
-					<li>flask</li>
-					<li>Node.js</li>
-					<li>React</li>
-					<li>Next</li>
-					<li>MongoDB</li>
-					<li>Mongoose</li>
-					<li>npm</li>
-					<li>Pair Programming</li>
-					<li>Figma</li>
-					<li>NoSQL</li>
-					<li>Trello</li>
-					<li>Slack</li>
-					<li>REST</li>
-					<li>Scrum</li>
-					<li>GitHub</li>
-				</ul>
-			</section>
-			<section class="contact box" id="contact">
-				<h2>Let's team up</h2>
-				<ul class="contactlinks">
-					<li>Munich 📍</li>
-					<li><a href="https://github.com/vaupunkt">GitHub</a></li>
-					<li>
-						<a href="https://www.linkedin.com/in/velikokardziev/">LinkedIn</a>
-					</li>
-				</ul>
-			</section>
-			<section class="biography box" id="biography">
-				<h2>Biography</h2>
-				<table>
-					<thead>
-						<th class="biographyemoji"></th>
-						<th><h3>When</h3></th>
-						<th><h3>What</h3></th>
-					</thead>
-					<tbody>
-						<tr>
-							<td class="biographyemoji">🧑‍🎓</td>
-							<td class="date">May '23 - Aug '23</td>
-							<td class="biographycontent">
-								Web Development
-								<a href="https://www.neuefische.de/bootcamp/web-development"
-									>@Neue Fische</a
-								>
-							</td>
-						</tr>
-						<tr>
-							<td class="biographyemoji">💼</td>
-							<td class="date">Oct '22 - April '23</td>
-							<td class="biographycontent">
-								Projectmanagement
-								<a href="https://www.trurnit.de/">@trurnit GmbH</a>
-							</td>
-						</tr>
-						<tr>
-							<td class="biographyemoji">💼</td>
-							<td class="date">April '20 - Sept '23</td>
-							<td class="biographycontent">
-								Projectmanagement
-								<a href="https://katapult-magazin.de/de/autoren/veliko-kardziev"
-									>@Katapult Magazin & Verlag</a
-								>
-							</td>
-						</tr>
-						<tr>
-							<td class="biographyemoji">💼</td>
-							<td class="date">Jan '18 - March '20</td>
-							<td class="biographycontent">
-								Production Manager
-								<a href="https://www.ard-zdf-aufnahmeleitung.de/"
-									>@WDR, NDR & rbb</a
-								>
-							</td>
-						</tr>
-						<tr>
-							<td class="biographyemoji">🧑‍🎓</td>
-							<td class="date">Feb '14 - Dez '18</td>
-							<td class="biographycontent">Economics (B. Sc.) @TU Dresden</td>
-						</tr>
-						<tr>
-							<td class="biographyemoji">👨🏼‍💻</td>
-							<td class="date">ca. 2008 - 2012</td>
-							<td class="biographycontent">
-								(Dis-)Assambled first Computer, installed Linux everywhere
-							</td>
-						</tr>
-						<tr>
-							<td class="biographyemoji">👾</td>
-							<td class="date">since always</td>
-							<td class="biographycontent">
-								interests in Gaming, IT, Homebrew, Jailbreaking, Rooting and
-								Data Science
-							</td>
-						</tr>
-						<tr>
-							<td class="biographyemoji"></td>
-							<td class="date">July 1993</td>
-							<td class="biographycontent">Birth</td>
-						</tr>
-					</tbody>
-				</table>
-			</section>
-		</main>
-		<footer>
-			Made with 💌 by <a href="https://github.com/vaupunkt">Veliko Kardziev</a>
-		</footer>
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <title>Veliko Kardziev</title>
+  </head>
+  <body>
+    <header>
+      <h1>Veliko Kardziev</h1>
+      <ul class="nav">
+        <li><a href="#aboutme">About me</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#biography">Biography</a></li>
+      </ul>
+    </header>
+    <main>
+      <section class="aboutme" id="aboutme">
+        <h2>About Me</h2>
+        <article class="infosaboutme">
+          <figure class="profilepicture">
+            <img
+              src="./assets/profilepicture-transparent.png"
+              alt="A picture of me" />
+            <figcaption>Hi, it's me!</figcaption>
+          </figure>
+          <section class="description box">
+            <h3>Loving</h3>
+            <ul class="thingsilove">
+              <li>Nature 🌳</li>
+              <li>Urban Mobility 🚴‍♂️</li>
+              <li>Sustainability ♻️</li>
+              <li>Social Economy ✌🏼</li>
+              <li>Pretzels 🥨</li>
+            </ul>
+          </section>
+        </article>
+      </section>
+      <section class="techstack box">
+        <h2>Tech Stack</h2>
+        <ul class="techstacklist">
+          <li>HTML5</li>
+          <li>CSS3</li>
+          <li>Java</li>
+          <li>Git Workflow</li>
+          <li>JavaScript ES8+</li>
+          <li>Python</li>
+          <li>flask</li>
+          <li>Node.js</li>
+          <li>React</li>
+          <li>Next</li>
+          <li>MongoDB</li>
+          <li>Mongoose</li>
+          <li>npm</li>
+          <li>Pair Programming</li>
+          <li>Figma</li>
+          <li>NoSQL</li>
+          <li>Trello</li>
+          <li>Slack</li>
+          <li>REST</li>
+          <li>Scrum</li>
+          <li>Git</li>
+        </ul>
+      </section>
+      <section class="contact box" id="contact">
+        <h2>Let's team up</h2>
+        <ul class="contactlinks">
+          <li>Greifswald 📍</li>
+          <li><a href="https://github.com/vaupunkt">GitHub</a></li>
+          <li>
+            <a href="https://www.linkedin.com/in/velikokardziev/">LinkedIn</a>
+          </li>
+        </ul>
+      </section>
+      <section class="biography box" id="biography">
+        <h2>Biography</h2>
+        <table>
+          <thead>
+            <th class="biographyemoji"></th>
+            <th><h3>When</h3></th>
+            <th><h3>What</h3></th>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="biographyemoji">💼</td>
+              <td class="date">Sep '23 - today</td>
+              <td class="biographycontent">
+                Front End Development
+                <a href="https://sharemagazines.de/">@sharemagazines GmbH</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="biographyemoji">🧑‍🎓</td>
+              <td class="date">May '23 - Aug '23</td>
+              <td class="biographycontent">
+                Web Development
+                <a href="https://www.neuefische.de/bootcamp/web-development"
+                  >@Neue Fische</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td class="biographyemoji">💼</td>
+              <td class="date">Oct '22 - April '23</td>
+              <td class="biographycontent">
+                Projectmanagement
+                <a href="https://www.trurnit.de/">@trurnit GmbH</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="biographyemoji">💼</td>
+              <td class="date">April '20 - Sept '23</td>
+              <td class="biographycontent">
+                Projectmanagement
+                <a href="https://katapult-magazin.de/de/autoren/veliko-kardziev"
+                  >@Katapult Magazin &amp; Verlag</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td class="biographyemoji">💼</td>
+              <td class="date">Jan '18 - March '20</td>
+              <td class="biographycontent">
+                Production Manager
+                <a href="https://www.ard-zdf-aufnahmeleitung.de/"
+                  >@WDR, NDR &amp; rbb</a
+                >
+              </td>
+            </tr>
+            <tr>
+              <td class="biographyemoji">🧑‍🎓</td>
+              <td class="date">Feb '14 - Dez '18</td>
+              <td class="biographycontent">Economics (B. Sc.) @TU Dresden</td>
+            </tr>
+            <tr>
+              <td class="biographyemoji">👨🏼‍💻</td>
+              <td class="date">ca. 2008 - 2012</td>
+              <td class="biographycontent">
+                (Dis-)Assambled first Computer, installed Linux everywhere
+              </td>
+            </tr>
+            <tr>
+              <td class="biographyemoji">👾</td>
+              <td class="date">since always</td>
+              <td class="biographycontent">
+                interests in Gaming, IT, Homebrew, Jailbreaking, Rooting and
+                Data Science
+              </td>
+            </tr>
+            <tr>
+              <td class="biographyemoji"></td>
+              <td class="date">July 1993</td>
+              <td class="biographycontent">Birth</td>
+            </tr>
+          </tbody>
+        </table>
+      </section>
+    </main>
+    <footer>
+      Made with 💌 by <a href="https://github.com/vaupunkt">Veliko Kardziev</a>
+    </footer>
+  </body>
 </html>
