enhance biography section with additional education details

--- a/index.html
+++ b/index.html
@@ -55,10 +55,11 @@
           <li>Next</li>
           <li>MongoDB</li>
           <li>Mongoose</li>
+          <li>mysql</li>
+          <li>NoSQL</li>
           <li>npm</li>
           <li>Pair Programming</li>
           <li>Figma</li>
-          <li>NoSQL</li>
           <li>Trello</li>
           <li>Slack</li>
           <li>REST</li>
@@ -85,6 +86,14 @@
             <th><h3>What</h3></th>
           </thead>
           <tbody>
+            <tr>
+              <td class="biographyemoji">🧑‍🎓</td>
+              <td class="date">Aug '24 - today</td>
+              <td class="biographycontent">
+                Master of Computer Science
+                <a href="https://www.hochschule-trier.de/informatik/fernstudium/studium/masterfernstudium/mcsc">@University of Applied Sciences</a>
+              </td>
+            </tr>
             <tr>
               <td class="biographyemoji">💼</td>
               <td class="date">Sep '23 - today</td>
@@ -135,6 +144,11 @@
               <td class="biographyemoji">🧑‍🎓</td>
               <td class="date">Feb '14 - Dez '18</td>
               <td class="biographycontent">Economics (B. Sc.) @TU Dresden</td>
+            </tr>
+            <tr>
+              <td class="biographyemoji">🧑‍🎓</td>
+              <td class="date">Sept '12 - March '14</td>
+              <td class="biographycontent">Audiovisual Media Designer @rbb</td>
             </tr>
             <tr>
               <td class="biographyemoji">👨🏼‍💻</td>
